--- a/ux-work.html
+++ b/ux-work.html
@@ -5,6 +5,51 @@ permalink: /ux-work/
 
 <h2>View my UX work:</h2>
 
+<p>>I don't have a typical process or approach that I use for every project.  A lot of the times I do what makes the most sense for the project (out of my UX toolkit), and what will be the most useful to others in the end.   With a few exceptions:</p>
+
+ <ul>
+  <li><b>Personas</b>  I realize they're somewhat controversial in the industry, and unfortunately the developers here don't take them too seriously (I'm working on that!)  Even if it's just me that looks at them I think they're helpful for my own design, especially while writing scenarios or storyboarding.  If I'm stuck, just being able to picture the user in the system often sparks new ideas and generates new perspectives.  So I'll continue using (and advocating for) them.</li>
+  <li><b>Literature research</b>  I try to find academic articles, via Google Scholar or the ACM Database.  Although this practice will likely stop once I'm not at the library or in school, because to be honest I normally don't find very much actionable information.  I just like to know I'm covering all of my bases! </li>
+  <li><b>Comparative research</b>, usually throughout the entire design process.  At the beginning of a project it's good to know what else is out there - who has solved this problem well?  Also to start with listing and comparing features. When I get stuck, I can usually get inspiration by seeing how other sites handle problems (and why reinvent the wheel?)</li>
+</ul> 
+
+<p>Otherwise, it probably makes more sense for me to talk about some of the projects I've worked on, and the deliverables produced over the course of the project:</p>
+
+<h3>Library Website Information Architecture</h3>
+
+<p>This is my current project, so I can only talk about my process so far.  It is a fairly daunting project with some pretty big challenges - the library has never had any IA work, from what I can tell.  Our librarian who was responsible for the website content retired a few years ago, we tried in vain to replace him, and all the while a lot of the content grew outdated and new content was added by many different people but the rest of the site was never pruned.</p>
+Among the many issues (/problems/challenges?) I'm tackling:
+
+ <ul>
+  <li>SEO problems - a lot of pages are no longer linked on the website but remained for google to see.  As a result we have a lot of outdated policies and other information showing up when they shouldn't be.</li>
+  <li>Strong content ownership for groups within the library - many diverse groups throughout the library have invested a lot of time and effort putting together this information.  Vesting them in changes towards a user centered design takes a lot of time.</li>
+  <li>Lack of content ownership for other pieces within the site, and through server configuration unable to identify even who has updated pages, in most cases</li>
+  <li>Content - A lot of content (over 500 pages worth!)</li>
+  <li>In addition to strong content ownership, there are some stakeholders who think the site works fine as it is.</li>
+</ul>
+
+My first task was to write a <a href="/samples/IAProjectPlan.pdf">project proposal/plan</a>, which outlines my planned activities.  I also wrote up a <a href="/samples/IAPurposeStatement.pdf">purpose statement</a>, which aligns to the library's mission and vision, and as a way to drive my approach to the project.  
+Because of the sheer number of stakeholders I created a meeting plan/strategy, an introduction to <a href="/samples/IAHandout.pdf">IA handout</a>, and many different content inventory spreadsheets for each area.  This is still in the early stage of the project, I'm currently performing card sorts and analyzing google analytics data.
+
+<h3>Digital Exhibits</h3>
+This is another ongoing project - in which we will be developing software that allows curators within special collections and rare books to create online exhibits and collections.
+
+My process for this project:
+ <ul>
+  <li><a href="/samples/DEC-OnOntology.pdf">Literature Review</a></li>
+  <li><a href="/samples/DEC-ComparativeAnalysis.pdf">Comparative Analysis</a></li>
+  <li>Initial information gathering meetings with stakeholders (we had ten such <a href="/samples/DEC-NatashaSara.pdf">meetings</a>)</li>
+  <li>Analysis/Coding/Tagging (I ended up writing a Google Docs plugin which allowed me to "tag" and categorize things that came up in the stakeholder meetings)</li>
+  <li>Worked with others on the team to create a post-it note affinity diagram of what came up in the interview</li>
+  <li>The affinity diagram led to a <a href="/samples/DEC-FeatureMatrix.pdf">feature matrix</a></li>
+  <li>Meeting with stakeholders also led to (provisional) <a href="/samples/DEC-Personas.pdf">personas</a></li>
+  <li>My next to-do is to create scenarios and work on sketches with the developers, guided by our user analysis</li>
+</ul>
+
+
+
+
+
 
 <h3>Father Hesburgh Digital Archives</h3>
 This is my most recent completed project at the library - a pilot project for building a website about Father Hesburgh's role in the Civil Rights era.  
