--- a/ux-work.html
+++ b/ux-work.html
@@ -5,11 +5,11 @@ permalink: /ux-work/
 
 <h2>View my UX work:</h2>
 
-<p>>I don't have a typical process or approach that I use for every project.  A lot of the times I do what makes the most sense for the project (out of my UX toolkit), and what will be the most useful to others in the end.   With a few exceptions:</p>
+<p>I don't have a typical process or approach that I use for every project.  A lot of the times I do what makes the most sense for the project (out of my UX toolkit), and what will be the most useful to others in the end.   With a few exceptions:</p>
 
  <ul>
-  <li><b>Personas</b>  I realize they're somewhat controversial in the industry, and unfortunately the developers here don't take them too seriously (I'm working on that!)  Even if it's just me that looks at them I think they're helpful for my own design, especially while writing scenarios or storyboarding.  If I'm stuck, just being able to picture the user in the system often sparks new ideas and generates new perspectives.  So I'll continue using (and advocating for) them.</li>
-  <li><b>Literature research</b>  I try to find academic articles, via Google Scholar or the ACM Database.  Although this practice will likely stop once I'm not at the library or in school, because to be honest I normally don't find very much actionable information.  I just like to know I'm covering all of my bases! </li>
+  <li><b>Personas</b>, which I realize they're somewhat controversial in the industry, and unfortunately the developers here don't take them too seriously (I'm working on that!)  Even if it's just me that looks at them I think they're helpful for my own design, especially while writing scenarios or storyboarding.  If I'm stuck, just being able to picture the user in the system often sparks new ideas and generates new perspectives.  So I'll continue using (and advocating for) them.</li>
+  <li><b>Literature research</b>,  I try to find academic articles, via Google Scholar or the ACM Database.  Although this practice will likely stop once I'm not at the library or in school, because to be honest I normally don't find very much actionable information.  I just like to know I'm covering all of my bases! </li>
   <li><b>Comparative research</b>, usually throughout the entire design process.  At the beginning of a project it's good to know what else is out there - who has solved this problem well?  Also to start with listing and comparing features. When I get stuck, I can usually get inspiration by seeing how other sites handle problems (and why reinvent the wheel?)</li>
 </ul> 
 
@@ -56,7 +56,7 @@ This is my most recent completed project at the library - a pilot project for bu
 The most notable challenge about this project is that the primary audience is for potential donors (think "flashy"), but it is intended to serve as a scholarly research tool.
 
 
-<p><a href="/samples/FatherHesburghArchivesPresentation.pdf">Presentation to upper management</a> Note: Mockups (p. 16-20) were done by a coworker, and the template design is a library standard, otherwise the content is mine</p>
+<p><a href="/samples/FatherHesburghArchivesPresentation.pdf">Presentation to upper management</a></p><p class="small">Note: Mockups (p. 16-20) were done by a coworker, and the template design is a library standard, otherwise the content is mine</p>
 <p><a href="/samples/FatherHesburghFullReport.pdf">Full final report</a></p>
 
 
