--- a/ux-work.html
+++ b/ux-work.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /ux-work/
 ---
 
-<h2>View my UX work:</h2>
+<h2>View my UX work</h2>
 
 <p>I don't have a typical process or approach that I use for every project.  A lot of the times I do what makes the most sense for the project (out of my UX toolkit), and what will be the most useful to others in the end.   With a few exceptions:</p>
 
