--- a/about.html
+++ b/about.html
@@ -3,46 +3,21 @@ layout: default
 title: About Me!
 permalink: /about/
 ---
+<p>I thrive on helping people - and in my line of work this ends up being the end user whom I advocate for.  I tend to view solutions that are more of an "And" than an "Or", and approach problems holistically with a primary goal of understanding reasoning of the end user (and/or business reason, as applicable).</p>
+<p>But that is about as far as my brand of optimism goes - I'm very analytical (almost to a fault), and - perhaps out of sheer stubborness - don't give up on solving problems once determined to figure them out.</p>
+<p>Perhaps my best asset is in growth-based mindset.  I love learning new things all the time - improving the way I interact with others and learning about behavior, emotions and motivations.  I have mostly worked in only two organizations throughout my thirteen year career, I've never stayed on the same job for more than a couple of years, often drastically changing my focus to new technologies and/or new stakeholders.  As a result of this I've gained a lot of varied experience - from very large production oracle environments, to smaller workflow internal applications.  Throughout, my best work has remained on helping others with their work.</p>
 
-<h2>Full-Stack Developer</h2>
-I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.  Over the years, this has meant:
+<h3>Things I love to learn about</h3>
+Some subjects really fascinate me and ultimately, I'd love for my work to somehow impact:
  <ul>
-  <li>(The standards):  HTML, Javascript (yes, pre-jQuery!), CSS</li>
-  <li>Perl / Postgresql  - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today.  This was done in about 2002, well before myspace started or other user content driven sites.  If only I'd picked something with broader appeal than chainmail! :-)</li>
-  <li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
-  <li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
-</ul>
-Since I've been at the library:
-<ul>
-  <li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle.  This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
-  <li>PHP / MySQL</li>
-  <li>Ruby on Rails / JQuery / CoffeeScript / SCSS / Microdata via schema.org</li>
-  <li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
+  <li>Learning about what motivates people, how emotions work and influence behavior (and vice-versa)</li>
+  <li>Pretty much anything relating to cognitive science or neuroscience</li>
+  <li>Developmental disorders - especially Autism and ADHD - and the use of technology/games for developing affect and ease learning - so much that I wrote a dissertation about this subject</li>
+  <li>The technology in our daily lives - things like nutrition, fitness, health, learning, entertainment, etc.</li>
 </ul>
 
 
-<h2>With a UX interest</h2>
-I've long been a developer, but by far I'm best at figuring out how to use software to solve problems for users.  
-This is what drove me to choose to get into computers in the first place when I was in high school in a retail job - we used a poorly designed point-of-sale system and I knew I could come up with better softrware than that. (As an illustration - the F5 key would complete the order - but right next to it the F4 key would void the sale, and without verifying first.  It is incredibly frustrating to accidentally cancel an order and have to re-ring everything, in front of the customer.  Seriously, though, who would do this ?!)
-<br /><br />
-In 2010 I decided to get my Master's degree in Human-Computer Interaction from DePaul, after having written and open sourcing a successful electronic resources management system (ERMS), for which I invested a lot into learning about usability and understanding the problemset and workflow, and developed it using an iterative design process.  It paid off for the project - the ERMS has been adopted and is in use in about 50 confirmed institutions (many more unknown), and even has a handful of developers from other institutions that continue to contribute and maintain to the codebase on github.  As a developer, it has been incredibly gratifying that to find out about user groups and presentations about the software being done at conferences that I'm not even a part of!  
-<br />The project also cemented my interest in usability and design - because without a doubt, it wasn't the code that drove CORAL's success - but that users enjoy using the interface and it solves the types of issues they face every day.  (though, perhaps the flexible data model helps :-) )
-<br />Anyway, in February 2014 I changed my job at the library to focus on library UX.  I've finished about two-thirds of my master's degree and will probably be slowly chugging away at it for another year or two.
-
-
-<h2>Areas of special interest</h2>
-The following are areas that I love to learn about and draw inspiration from - and ultimately would love my work in some way to affect:
- <ul>
-  <li>Fitness and nutrition, or other lifestyle choices</li>
-  <li>Learning how the brain works - how technology and our environment work together to affect our motivation and emotions</li>
-  <li>Developmental disorders - especially Autism and ADHD, and the use of technology and games for emotion and developing affect (I wrote a dissertation about this subject)</li>
-  <li>Arts and Entertainment - especially within music, fashion or interior design</li>
-  <li>Digital scholarship/librarianship and learning</li>
-  <li>Broadly speaking, the way that technology can fit into our lives to make us more productive, happy and fulfilled</li>
-</ul>
-
-
-<h2>In addition, the things that I like to do in my free time:</h2>
+<h2>Other things that I like to do in my free time:</h2>
  <ul>
   <li>Craft beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
