--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: About Me!
 permalink: /about/
 ---
+<h2>About Me</h2>
 <p>I thrive on helping people - and in my line of work this ends up being the end user whom I advocate for.  I tend to view solutions that are more of an "And" than an "Or", and approach problems holistically with a primary goal of understanding reasoning of the end user (and/or business reason, as applicable).</p>
 <p>But that is about as far as my brand of optimism goes - I'm very analytical (almost to a fault), and - perhaps out of sheer stubborness - don't give up on solving problems once determined to figure them out.</p>
 <p>Perhaps my best asset is in growth-based mindset.  I love learning new things all the time - improving the way I interact with others and learning about behavior, emotions and motivations.  I have mostly worked in only two organizations throughout my thirteen year career, I've never stayed on the same job for more than a couple of years, often drastically changing my focus to new technologies and/or new stakeholders.  As a result of this I've gained a lot of varied experience - from very large production oracle environments, to smaller workflow internal applications.  Throughout, my best work has remained on helping others with their work.</p>
@@ -17,7 +17,7 @@ Some subjects really fascinate me and ultimately, I'd love for my work to someho
 </ul>
 
 
-<h2>Other things that I like to do in my free time:</h2>
+<h3>Other things that I like to do in my free time:</h3>
  <ul>
   <li>Craft beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
