--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ Some subjects really fascinate me and ultimately, I'd love for my work to someho
 </ul>
 
 
-<h3>Other things that I like to do in my free time:</h3>
+<h3>Other things that I like to do in my free time</h3>
  <ul>
   <li>Craft beer, visiting breweries</li>
   <li>Various house projects - especially decorating, browsing pinterest or ikeahackers for inspiration</li>
