--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Web and Reporting Developer</b><br /> Hesburgh Library<br />University of Notre Dame <br />(2007 - Current)</p>
-      <p><b>Developer on the Cardmember Database</b>,<br /><b>ETL Developer for Marketing</b><br /> Discover Financial<br />Riverwoods, IL <br />(2001 - 2007)</p>
+      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Software Engineer</b>,<br /><b>Sr. Web and Reporting Developer</b><br /> Hesburgh Library<br />University of Notre Dame <br />(2007 - Current)</p>
+      <p><b>Marketing Campaigns ETL Developer</b>, <br /><b>Cardmember Database Developer</b>,<br /> Discover Financial<br />Riverwoods, IL <br />(2001 - 2007)</p>
     </div>
     
   </div>
