--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ layout: default
 ---
 <div class="clearfix">
 <img src="images/me.png" alt="Me" class="site-avatar" />
-<h1>Hello there!</h1>
-My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
-Have a look around, enjoy yourself, and let me know if you have any questions.
+<h1>Hello and welcome!</h1>
+I'm a long-time creator - I started with fashion and jewelry design in high school and college, on to being a web and database developer after college.
+Naturally my interest in development started veering towards user-centered design, and so I started for my master's in 2011 in Human-Computer Interaction.  While I absolutely *love* all things UX, I also love seeing through the creation of an entire project, all the way from first talking with clients about their needs, to seeing them use it in production (hopefully with few open tickets, haha).  And, depending on how well the UCD went, hopefully little need to retool later.
+I love the challenge of a good problem, and the challenge of beauty and simplicity.  And in building software products that delight and work like second nature.
 </div>
 
 <br />
@@ -16,8 +17,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Software Engineer</b>,<br /><b>Sr. Web and Reporting Developer</b><br /> Hesburgh Library<br />University of Notre Dame <br />(2007 - Current)</p>
-      <p><b>Marketing Campaigns ETL Developer</b>, <br /><b>Cardmember Database Developer</b>,<br /> Discover Financial<br />Riverwoods, IL <br />(2001 - 2007)</p>
+      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Software Engineer</b><br /> Hesburgh Library<br />University of Notre Dame <br /><i>(2007 - Current)</i></p>
+      <p><b>Marketing ETL Developer</b>, <br /><b>Cardmember Database Developer</b>,<br /> Discover Financial<br />Riverwoods, IL <br /><i>(2001 - 2007)</i></p>
     </div>
     
   </div>
