--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="clearfix">
 <img src="images/me.png" alt="Me" class="site-avatar" />
 <h1>Hello and welcome!</h1>
-I'm a long-time creator - I started with fashion and jewelry design in high school and college, on to being a web and database developer after college.
+I'm a long-time creator - I started with fashion and jewelry design in high school and college, and after growing up around computers, finally to web and database development.
 Naturally my interest in development started veering towards user-centered design, and so I started for my master's in 2011 in Human-Computer Interaction.  While I absolutely *love* all things UX, I also love seeing through the creation of an entire project, all the way from first talking with clients about their needs, to seeing them use it in production (hopefully with few open tickets, haha).  And, depending on how well the UCD went, hopefully little need to retool later.
 I love the challenge of a good problem, and the challenge of beauty and simplicity.  And in building software products that delight and work like second nature.
 </div>
