--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <h1>Hello and welcome!</h1>
 <div class="clearfix">
 <img src="images/me.png" alt="Me" class="site-avatar" />
-I'm a long-time creator - I started with fashion and jewelry in high school and college, and after growing up around computers ended up in web and database development.
+I'm a long-time creator - starting with fashion and jewelry in high school and college and, after growing up around computers, on to web and database development.
 Naturally my interest in development started veering towards user-centered design, and so I started for my master's in 2011 in Human-Computer Interaction.  I love seeing the creation of an entire project, all the way from first talking with clients/users about their needs, to seeing it used in production (hopefully with the least open tickets!).  And with good doses of UCD throughout the process, hopefully little need to retool later.  
 I love dreaming of the theoretical but then paring it down to the pragmatic.  
 And the challenge of a good problem, and of beauty and simplicity.  And in building software products that delight and work exactly as they should.
