--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ And the challenge of a good problem, and of beauty and simplicity.  And in build
       <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Ruby on Rails</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>PHP</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>MySQL (incl. scripting and optimization)</td></tr>
-      <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript</td></tr>
+      <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript / Angular JS</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS</td></tr>
-      <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Mobile via jQuery Mobile and PhoneGap</td></tr>
+      <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Mobile via Ionic/Angular/Cordova and jQuery Mobile/PhoneGap</td></tr>
       <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Data modelling, advanced and warehousing</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>ETL and Report Development</td></tr>
       </table>
