--- a/software-development.html
+++ b/software-development.html
@@ -8,8 +8,15 @@ layout: default
 Of course, it was not done in a vaccuum, but I was lucky enough to have a coworker who understood how libraries work inside-and-out.  He had some great ideas, and I was able to turn them into a reality, through using (then unbeknownst to me) user centered design.  This project is also what made me fall in love with UX and compelled me to pursue my master's in Human-computer Interaction.  I believe that the coding and the software itself isn't anything extraordinary, and the user interface is why it's been so successful. (that, and possibly the flexible data model :-)
 <br /><br />You can view the drupal marketing site I designed, my work, documentation and data models on <a href="http://erm.library.nd.edu">erm.library.nd.edu</a>.  The code is available on github at <a href="https://github.com/ndlibersa">github.com/ndlibersa</a>
 <br /><br />
+<h3>The App of Happiness</h3>
+<p class="small">*  Which will shortly be renamed, it turns out searching this title doesn't appear in iTunes search!</p>
+<p>This is my most recently developed application, built on the beautiful ionic framework using angular js and cordova to package it.  The backend is a heroku rails application sitting atop mysql and mostly just serving APIs (and the marketing site).
+<br /><a href="http://the-apps-of.com">view the-apps-of.com marketing site</a></p>
+
+
+
 <h3>Library Employee Directory</h3>
-<p>This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.<br /><a href="http://library.nd.edu/directory">view the directory</a></p>
+<p>This was developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.<br /><a href="http://library.nd.edu/directory">view the directory</a></p>
 <div class="clearfix">
   <div class="section"><img src="images/emp_dir.png" class="left" /></div>
   <div class="section"><img src="images/emp_dir2.png" class="right" /></div>
