--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@ layout: default
 <div class="clearfix">
 <img src="images/me.png" alt="Me" class="site-avatar" />
 <h1>Hello and welcome!</h1>
-I'm a long-time creator - starting with fashion and jewelry in high school and college and, after growing up around computers, on to web and database development.
-Naturally my interest in development started veering towards user-centered design, and so I started for my master's in 2011 in Human-Computer Interaction.  I love seeing the creation of an entire project, all the way from first talking with clients/users about their needs, to seeing it used in production (hopefully with the least open tickets!).  And with good doses of UCD throughout the process, hopefully little need to retool later.  
-I love dreaming of the theoretical but then paring it down to the pragmatic.  
-And the challenge of a good problem, and of beauty and simplicity.  And in building software products that delight and work exactly as they should.
+I live to make beautiful and usable interfaces! I've been working as a web / reporting developer since graduating from Purdue in 2001, fell in love with UI design and UX and in 2010 decided to pursue my Master's degree in Human-Computer Interaction from DePaul University (still a few classes away from graduating - hopefully this year!) Currently I'm working for an Ed Tech startup in Chicago, ThinkCERCA, in a combination role of both engineer and UX designer. Prior to this position I worked at
+the University of Notre Dame libraries and Discover Financial Services.
 </div>
 
 <br />
@@ -19,7 +17,8 @@ And the challenge of a good problem, and of beauty and simplicity.  And in build
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Software Engineer</b><br /> Hesburgh Library<br />University of Notre Dame <br /><i>(2007 - Current)</i></p>
+      <p><b>Sr. UX Engineer</b><br /> ThinkCERCA <br /><i>(5/2015 - Current)</i></p>
+      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Software Engineer</b><br /> Hesburgh Library<br />University of Notre Dame <br /><i>(2007 - 2015)</i></p>
       <p><b>Marketing ETL Developer</b>, <br /><b>Cardmember Database Developer</b>,<br /> Discover Financial<br />Riverwoods, IL <br /><i>(2001 - 2007)</i></p>
     </div>
     
@@ -35,9 +34,9 @@ And the challenge of a good problem, and of beauty and simplicity.  And in build
       <table class="bar-graph-table">
       <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Ruby on Rails</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>PHP</td></tr>
-      <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>MySQL (incl. scripting and optimization)</td></tr>
-      <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript / Angular JS</td></tr>
-      <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS</td></tr>
+      <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>MySQL (incl. scripting and optimization) / PostgreSQL</td></tr>
+      <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript / Angular JS / Ember JS</td></tr>
+      <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS / Bootstrap / Material Design Lite</td></tr>
       <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Mobile via Ionic/Angular/Cordova and jQuery Mobile/PhoneGap</td></tr>
       <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Data modelling, advanced and warehousing</td></tr>
       <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>ETL and Report Development</td></tr>
