--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="clearfix">
 <img src="images/me.png" alt="Me" class="site-avatar" />
 <h1>Hello and welcome!</h1>
-I live to make beautiful and usable interfaces! I've been working as a web / reporting developer since graduating from Purdue in 2001, fell in love with UI design and UX and in 2010 decided to pursue my Master's degree in Human-Computer Interaction from DePaul University (still a few classes away from graduating - hopefully this year!) Currently I'm working for an Ed Tech startup in Chicago, ThinkCERCA, in a combination role of both engineer and UX designer. Prior to this position I worked at
+I've been a web developer since graduating from Purdue in 2001.  After falling in love with UI design and UX, I decided to pursue my Master's degree in Human-Computer Interaction from DePaul University (still a few classes away from graduating - hopefully this year!) Currently I'm working for an Ed Tech startup in Chicago, ThinkCERCA, in a combination role of both engineer and UX designer. Prior to this position I worked at
 the University of Notre Dame libraries and Discover Financial Services.
 </div>
 
